plugins {
	id 'idea'
	id 'application'
	id 'java'
}

group 'uk.gov.di.ipv'

repositories {
	mavenCentral()
}

java {
	sourceCompatibility = JavaVersion.VERSION_17
}

dependencies {
	implementation "com.sparkjava:spark-core:2.9.3",
			"com.sparkjava:spark-template-mustache:2.7.1",
			"com.nimbusds:oauth2-oidc-sdk:9.20",
			"com.fasterxml.jackson.core:jackson-core:2.13.1",
			"com.fasterxml.jackson.core:jackson-databind:2.13.1",
			"com.fasterxml.jackson.core:jackson-annotations:2.13.1",
			"com.google.code.gson:gson:2.8.9",
			"org.slf4j:slf4j-simple:1.7.32"

	compileOnly 'org.projectlombok:lombok:1.18.22'
	annotationProcessor 'org.projectlombok:lombok:1.18.22'

	testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2',
			'org.mockito:mockito-core:4.2.0',
			"org.mockito:mockito-junit-jupiter:4.1.0",
			'uk.org.webcompere:system-stubs-jupiter:2.0.2',
			"org.hamcrest:hamcrest:2.2"
	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

test {
	useJUnitPlatform ()
}

run {
	debugOptions {
		enabled = true
		port = 5006
		server = true
		suspend = false
	}
}

application {
	mainClass = 'uk.gov.di.ipv.stub.cred.App'
}
